# MasterElfak-Masinsko-Ucenje

./: .gitignore  pyproject.toml
data/: russia_losses_equipment.csv  russia_losses_equipment_correction.csv  russia_losses_equipment_final.parquet  russia_losses_personnel.csv  urban_lifestyle_impact_dataset.csv
docs/: About Projekat_1.md  About.txt
