[project]
name = "masterelfak-masinsko-ucenje"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alepython",
    "matplotlib>=3.10.6",
    "notebook>=7.4.7",
    "numpy>=2.3.3",
    "pandas>=2.3.2",
    "scikit-learn>=1.7.2",
    "seaborn>=0.13.2",
    "shap>=0.48.0",
    "xgboost>=3.0.5",
]

[tool.uv.sources]
alepython = { git = "https://github.com/blent-ai/alepython.git" }
