[project]
name = "masterelfak-masinsko-ucenje"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alepython",
    "dash>=3.2.0",
    "folium>=0.20.0",
    "geopy>=2.4.1",
    "ipywidgets>=8.1.7",
    "matplotlib>=3.10.6",
    "notebook>=7.4.7",
    "numpy>=2.3.3",
    "pandas>=2.3.2",
    "plotly>=6.3.0",
    "pmdarima>=2.0.4",
    "prophet>=1.1.7",
    "pyarrow>=21.0.0",
    "scikit-learn>=1.7.2",
    "seaborn>=0.13.2",
    "shap>=0.48.0",
    "statsmodels>=0.14.5",
    "tensorflow>=2.20.0",
    "xgboost>=3.0.5",
]

[tool.uv.sources]
alepython = { git = "https://github.com/blent-ai/alepython.git" }
